--- a/slick/slick.css
+++ b/slick/slick.css
@@ -233,14 +233,14 @@
   display: inline-block;
 
   /* width: 12px;
-    height: 12px; */
+  height: 12px; */
   margin: 0 5px;
   padding: 0;
 
   cursor: pointer;
 }
 .slick-dots li button {
-  background-color: transparent;
+  background-color: black;
   border: 0;
   border-radius: 50%;
   color: transparent;
@@ -253,8 +253,18 @@
   position: relative;
   width: 16px;
 }
-.slick-dots li button::before {
+.slick-dots li button.button--bg-img {
+  background-color: transparent;
+}
+.slick-dots li button.button--bg-img[style='background-image: url("")'] {
   background-color: black;
+}
+.slick-dots li button::before {
+  background-color: inherit;
+  background-image: inherit;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 50%;
   content: "";
   height: 100%;
@@ -263,7 +273,6 @@
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: -1;
 }
 .slick-dots li button:hover,
 .slick-dots li button:focus {
@@ -309,10 +318,19 @@
   outline: 2px solid red;
 }
 .accessible .slick-dots li button {
+  background: rgba(0, 0, 0, 0.3);
+  background-image: none !important;
   color: white;
   font-size: 1rem;
   height: 20px;
   width: 20px;
+}
+.accessible .slick-dots li.slick-active button {
+  background: #000;
+}
+.accessible .slick-dots li button::before {
+  background: #000;
+  z-index: -1;
 }
 .accessible .slick-dots li.slick-active button,
 .accessible .slick-dots li.slick-active button:focus {
